--- a/templates/base.html
+++ b/templates/base.html
@@ -43,7 +43,7 @@
 
         <!-- Footer -->
         <div class="jumbotron text-center" style="margin-bottom: 0">
-            <p>Coppyright @2023 by ChuongTran</p>
+            <p>Coppyright @2023 by Thanhtm</p>
         </div>
         <!-- end footer -->
 
